# dom-collector

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
src/dom_collector/: __init__.py  binance_orderbook.py  cli.py  logger.py  okx_orderbook.py  snapshot_saver.py
src/dom_collector/tests/: test_binance_orderbook.py  test_okx_orderbook.py  test_snapshots.py
